--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,9 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+
+The eldest Oyster looked at him,  
+But never a word he said:  
+The eldest Oyster winked his eye,  
+And shook his heavy head--  
+Meaning to say he did not choose  
