--- a/poem.rmd
+++ b/poem.rmd
@@ -15,12 +15,15 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
-now I wonder what you're at!'You know the song, perhaps?" "I've heard something like it," said Alice.  
- "It goes on, you know," the Hatter continued,  
-"in this way: -- --   
-`Up above the world you fly,  
-Like a teatray in the sky.  
-
+How doth the little crocodile  
+Improve his shining tail,  
+And pour the waters of the Nile  
+On every golden scale!  
+How cheerfully he seems to grin  
+How neatly spreads his claws,  
+And welcomes little fishes in  
+With gently smiling jaws!  
+  
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
