--- a/poem.rmd
+++ b/poem.rmd
@@ -19,12 +19,16 @@ you, if you change any of this the git program will notice it and compromise you
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
-Two roads diverged in a yellow wood,  
-And sorry I could not travel both  
-And be one traveler, long I stood  
-And looked down one as far as I could  
-To where it bent in the undergrowth;  
-
+Whose woods these are I think I know  
+His house is in the village though;  
+He will not see me stopping here  
+To watch his woods fill up with snow.  
+  
+My little horse must think it queer  
+To stop without a farmhouse near  
+Between the woods and frozen lake  
+The darkest evening of the year.  
+  
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
