--- a/poem.rmd
+++ b/poem.rmd
@@ -15,6 +15,11 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+Little maidens,  
+when you look On this little story-book,  
+reading with attentive eye  
+Its enticing history,  
+never think hours of play  
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
